@@ -1,0 +1,4 @@
+## Script (Python) "expireAuthCookie"
+##title=Expire Authentication Cookie
+##parameters=resp, cookie_name
+resp.expireCookie( cookie_name, path='/')
