@@ -1,0 +1,4 @@
+## Script (Python) "setAuthCookie"
+##title=Set Authentication Cookie
+##parameters=resp, cookie_name, cookie_value
+resp.setCookie( cookie_name, cookie_value, path='/')
